# wind_turbine_speedometer

./: .gitignore  CMakeLists.txt  README.md
src/: clustering.cpp  clustering.h  img_converter.cpp  img_converter.h  main.cpp  parallel_image_processor.h  utility.h
